[gd_scene load_steps=2 format=1]

[ext_resource path="res://Menu/load_menu.gd" type="Script" id=1]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0

[node name="File1Btn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = 146.0
margin/right = 341.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="File1Label" type="Label" parent="File1Btn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 1.0
margin/right = 292.0
margin/bottom = 20.0
text = "Empty"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="File2Btn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 284.0
margin/right = 340.0
margin/bottom = 304.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="File2Label" type="Label" parent="File2Btn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 1.0
margin/right = 292.0
margin/bottom = 20.0
text = "Empty"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="File3Btn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 425.0
margin/right = 340.0
margin/bottom = 445.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="File3Label" type="Label" parent="File3Btn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 1.0
margin/right = 292.0
margin/bottom = 20.0
text = "Empty"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="BackBtn" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 447.0
margin/top = 567.0
margin/right = 554.0
margin/bottom = 587.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="BackLabel" type="Label" parent="BackBtn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 2.0
margin/right = 71.0
margin/bottom = 16.0
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="DeleteBtn" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 447.0
margin/top = 541.0
margin/right = 554.0
margin/bottom = 561.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="DeleteLabel" type="Label" parent="DeleteBtn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 2.0
margin/right = 71.0
margin/bottom = 16.0
text = "Erase"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="File1Btn" to="." method="_on_File1Btn_pressed"]

[connection signal="pressed" from="File2Btn" to="." method="_on_File2Btn_pressed"]

[connection signal="pressed" from="File3Btn" to="." method="_on_File3Btn_pressed"]

[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]


